tests/ui/coherence/const-errs-dont-conflict-103369.stderr
error[E0080]: evaluation panicked: Some error occurred
  --> $DIR/const-errs-dont-conflict-103369.rs:5:25
   |
LL | impl ConstGenericTrait<{my_fn(1)}> for () {}
   |                         ^^^^^^^^ evaluation of `<() as ConstGenericTrait<{my_fn(1)}>>::{constant#0}` failed inside this call
   |
note: inside `my_fn`
  --> $DIR/const-errs-dont-conflict-103369.rs:10:5
   |
LL |     panic!("Some error occurred");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

error[E0080]: evaluation panicked: Some error occurred
  --> $DIR/const-errs-dont-conflict-103369.rs:7:25
   |
LL | impl ConstGenericTrait<{my_fn(2)}> for () {}
   |                         ^^^^^^^^ evaluation of `<() as ConstGenericTrait<{my_fn(2)}>>::{constant#0}` failed inside this call
   |
note: inside `my_fn`
  --> $DIR/const-errs-dont-conflict-103369.rs:10:5
   |
LL |     panic!("Some error occurred");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
